implemented calculator with database

--- a/views/calculator.html
+++ b/views/calculator.html
@@ -8,7 +8,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
-			<form name="calculator" method="post" action="/calculator">
+			<form name="calculator" method="post" action="/calculator/convert">
 				<div class="col-md-6">
 				<label>Base Currency</label>
 					<select required="required" class="form-control" name="fromCurrency">
