--- a/views/index.html
+++ b/views/index.html
@@ -16,6 +16,7 @@
 			<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="fa fa-bars" aria-hidden="true"></i></a>
 			<ul class="right hide-on-med-and-down">
 				<li><a href="./calculator">Calculator</a></li>
+				<li><a href="./dashboard">Dashboard</a></li>
 			</ul>
 		</div>
 	</nav>
