--- a/views/calculator.html
+++ b/views/calculator.html
@@ -24,7 +24,7 @@
 						<option value="EUR">EUR</option>
 						<option value="GBP">GBP</option>
 						<option value="HKD">HKD</option>
-						<option value="HRF">HRF</option>
+						<option value="HRK">HRK</option>
 						<option value="HUF">HUF</option>
 						<option value="ILS">ILS</option>		
 						<option value="INR">INR</option>
@@ -61,7 +61,7 @@
 						<option value="EUR">EUR</option>
 						<option value="GBP">GBP</option>
 						<option value="HKD">HKD</option>
-						<option value="HRF">HRF</option>
+						<option value="HRK">HRK</option>
 						<option value="HUF">HUF</option>
 						<option value="ILS">ILS</option>
 						<option value="INR">INR</option>
@@ -97,7 +97,6 @@
 		<div class="col-md-12">
 			<p>Amount: {{amount}}</p>
 			<p>Converted Amount: {{convertToAmount}}</span></p>
-			<p>Exchange Rate: {{exchangeRate}}</p>
 			<p>Error: {{note}}</p>
 		</div>
 	</div>
