adding controller and views

--- a/views/dashboard/index.html
+++ b/views/dashboard/index.html
@@ -8,7 +8,7 @@
 <h3>Dashboard Body</h3>
 <div class="container">
 <h3>Click me to find the latest, historical currencies</h3>
-<button><a href="dashboard/latest">Latest</a></button>
-
+<button><a href="./dashboard/latest">Latest</a></button>
+<button><a href="./dashboard/historical">Historical</a></button>
 </div>
 {% endblock %}
