--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,15 @@
-<h1>
-  {{title}}
-</h1>
+<app-navbar></app-navbar>
+<div class="main">
+	<div class="row">
+		<h4 class="col-md-6" align="left">
+			Fantastic Four
+		</h4>
+		<h4 class="col-md-6" align="right">
+			Fxr Calculator
+		</h4>
+	</div>
+	<router-outlet></router-outlet>
+	<div class="col-md-6">
+		<flash-messages></flash-messages>
+	</div>
+</div>
