--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -1,3 +1,28 @@
-<p>
-  register works!
-</p>
+<div class="container-fluid">
+	<div class="row">
+		<h2 class="page-header">Register</h2>
+	</div>
+	<div class="row">
+		<div class="col-md-6">
+			<form (submit)="onRegisterSubmit()">
+				<div class="form-group">
+					<label>Name</label>
+					<input type="text" [(ngModel)]="name" name="name" class="form-control">
+				</div>
+				<div class="form-group">
+					<label>EmployeeId</label>
+					<input type="text" [(ngModel)]="employeeId" name="employeeId"  class="form-control">
+				</div>
+				<div class="form-group">
+					<label>Email</label>
+					<input type="text" [(ngModel)]="email" name="email"  class="form-control">
+				</div>
+				<div class="form-group">
+					<label>Password</label>
+					<input type="password" [(ngModel)]="password" name="password"  class="form-control">
+				</div>
+				<input type="submit" class="btn btn-primary" value="Submit">
+			</form>
+		</div>
+	</div>
+</div>
