--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -1,3 +1,15 @@
-<p>
-  login works!
-</p>
+<h2 class="page-header">Login</h2>
+
+<div class="col-md-6">
+	<form (submit)="onLogin()">
+		<div class="form-group">
+			<label>Employee Id</label>
+			<input type="text" [(ngModel)]="employeeId" name="employeeId"  class="form-control">
+		</div>
+		<div class="form-group">
+			<label>Password</label>
+			<input type="password" [(ngModel)]="password" name="password"  class="form-control">
+		</div>
+		<input type="submit" class="btn btn-primary" value="Login">
+	</form>
+</div>
