--- a/client/src/app/components/profile/profile.component.html
+++ b/client/src/app/components/profile/profile.component.html
@@ -1,3 +1,8 @@
-<p>
-  profile works!
-</p>
+<h2>Profile</h2>
+<div *ngIf="user">
+	<h2 class="page-header">{{user.name}}</h2>
+	<ul class="list-group">
+		<li class="list-group-item">Employee Id: {{user.employeeId}}</li>
+		<li class="list-group-item">Email: {{user.email}}</li>
+	</ul>
+</div>
