--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -9,12 +9,13 @@
 	<h3>Admin</h3>
 	<ul>
 		<!-- If user is not logged in -->
-		<li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact:true }"><a [routerLink]="['/register']">Register</a></li>
-		<li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact:true }"><a [routerLink]="['/login']">Login</a></li>
+		<li *ngIf="!authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact:true }"><a [routerLink]="['/register']">Register</a></li>
+		<li *ngIf="!authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact:true }"><a [routerLink]="['/login']">Login</a></li>
 
 		<!-- If User is logged in -->
-		<li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact:true}"><a [routerLink]="['/profile']">Profile</a></li>
-		<li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact:true }"><a [routerLink]="['/dashboard']">Dashboard</a></li>
-		<li><a (click)="onLogoutClick()" href="#">Logout</a></li>
+		<li *ngIf="authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact:true}"><a [routerLink]="['/profile']">Profile</a></li>
+		<li *ngIf="authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact:true }"><a [routerLink]="['/dashboard']">Dashboard</a></li>
+
+		<li *ngIf="authService.loggedIn()"><a (click)="onLogoutClick()" href="#">Logout</a></li>
 	</ul>
 </nav>
