completed latest rates route

--- a/client/src/app/components/dashboard/dashboard.component.html
+++ b/client/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,198 @@
-<p>
-  dashboard works!
-</p>
+<h3>Latest Currency Rates:</h3>
+
+<div align="left">
+	<table style="width:50%">
+		<tr>
+			<th>Symbol</th>
+			<th>Code</th>
+			<th>Currency</th> 
+			<th>Daily Rate</th>
+		</tr>
+		<tr>
+			<td>$</td> 
+			<td>AUD</td>
+			<td>Australian Dollar</td>
+			<td>{{AUD}}</td>	    
+		</tr>
+		<tr>
+			<td>лв</td> 
+			<td>BGN</td>
+			<td>Bulgarian Lev</td>
+			<td>{{BGN}}</td>
+		</tr>
+		<tr>
+			<td>R$</td> 
+			<td>BRL</td>
+			<td>Brazilian Real</td>
+			<td>{{BRL}}</td>	    
+		</tr>
+		<tr>
+			<td>$</td> 
+			<td>CAD</td>
+			<td>Canadian Dollar</td>
+			<td>{{CAD}}</td>	    
+		</tr>
+		<tr>
+			<td>$</td> 
+			<td>CHF</td>
+			<td>Swiss Franc</td>
+			<td>{{CHF}}</td>	    
+		</tr>
+		<tr>
+			<td>¥</td> 
+			<td>CNY</td>
+			<td>Chinese Yuan</td>
+			<td>{{CNY}}</td>	    
+		</tr>
+		<tr>
+			<td>Kč</td> 
+			<td>CZK</td>
+			<td>Czech Republic Koruna</td>
+			<td>{{CZK}}</td>	    
+		</tr>
+		<tr>
+			<td>kr</td> 
+			<td>DKK</td>
+			<td>Danish Krone</td>
+			<td>{{DKK}}</td>	    
+		</tr>
+		<tr>
+			<td>€</td> 
+			<td>EUR</td>
+			<td>Euro</td>
+			<td>{{EUR}}</td>	    
+		</tr>
+		<tr>
+			<td>£</td>
+			<td>GBP</td>
+			<td>British Pound Sterling</td>
+			<td>{{GBP}}</td>
+		</tr>
+		<tr>
+			<td>$</td> 
+			<td>HKD</td>
+			<td>Hong Kong Dollar</td>
+			<td>{{HKD}}</td>	    
+		</tr>
+		<tr>
+			<td>kn</td> 
+			<td>HRK</td>
+			<td>Croatian Kuna</td>
+			<td>{{HRK}}</td>	    
+		</tr>
+		<tr>
+			<td>Ft</td> 
+			<td>HUF</td>
+			<td>Hungarian Forint</td>
+			<td>{{HUF}}</td>	    
+		</tr>
+		<tr>
+			<td>₪</td> 
+			<td>ILS</td>
+			<td>Israeli Shekel</td>
+			<td>{{ILS}}</td>	    
+		</tr>
+		<tr>
+			<td>₹</td>
+			<td>INR</td>
+			<td>Indian Rupee</td>
+			<td>{{INR}}</td>
+		</tr>
+		<tr>
+			<td>¥</td> 
+			<td>JPY</td>
+			<td>Japanese Yen</td>
+			<td>{{JPY}}</td>	    
+		</tr>
+		<tr>
+			<td>₩</td> 
+			<td>KRW</td>
+			<td>Korean Won</td>
+			<td>{{KRW}}</td>	    
+		</tr>
+		<tr>
+			<td>$</td> 
+			<td>MXN</td>
+			<td>Mexican Peso</td>
+			<td>{{MXN}}</td>	    
+		</tr>
+		<tr>
+			<td>RM</td> 
+			<td>MYR</td>
+			<td>Malaysian Ringgit</td>
+			<td>{{MYR}}</td>	    
+		</tr>
+		<tr>
+			<td>kr</td> 
+			<td>NOK</td>
+			<td>Norwegian Krone</td>
+			<td>{{NOK}}</td>	    
+		</tr>
+		<tr>
+			<td>$</td> 
+			<td>NZD</td>
+			<td>New Zealand Dollar</td>
+			<td>{{NZD}}</td>	    
+		</tr>
+		<tr>
+			<td>₱</td> 
+			<td>PHP</td>
+			<td>Philippines Peso</td>
+			<td>{{PHP}}</td>	    
+		</tr>
+		<tr>
+			<td>zł</td> 
+			<td>PLN</td>
+			<td>Polish Zloty</td>
+			<td>{{PLN}}</td>	    
+		</tr>
+		<tr>
+			<td>lei</td> 
+			<td>RON</td>
+			<td>Romania New Leu</td>
+			<td>{{RON}}</td>	    
+		</tr>
+		<tr>
+			<td>₽</td> 
+			<td>RUB</td>
+			<td>Russian Ruble</td>
+			<td>{{RUB}}</td>	    
+		</tr>
+		<tr>
+			<td>kr</td> 
+			<td>SEK</td>
+			<td>Swedish Krona</td>
+			<td>{{SEK}}</td>	    
+		</tr>
+		<tr>
+			<td>$</td> 
+			<td>SGD</td>
+			<td>Singapore Dollar</td>
+			<td>{{SGD}}</td>	    
+		</tr>
+		<tr>
+			<td>฿</td> 
+			<td>THB</td>
+			<td>Thai Baht</td>
+			<td>{{THB}}</td>	    
+		</tr>
+		<tr>
+			<td>₺</td> 
+			<td>TRY</td>
+			<td>Turkish Lira</td>
+			<td>{{TRY}}</td>	    
+		</tr>
+		<tr>
+			<td>$</td>
+			<td>USD</td>
+			<td>United States Dollar</td>
+			<td>{{USD}}</td>
+		</tr>
+		<tr>
+			<td>R</td> 
+			<td>ZAR</td>
+			<td>South African Rand</td>
+			<td>{{ZAR}}</td>	    
+		</tr>
+	</table>
+</div>
