implemented back button

--- a/client/src/app/components/calculator/calculator.component.html
+++ b/client/src/app/components/calculator/calculator.component.html
@@ -77,9 +77,10 @@
 				</select>
 			</div>
 			<div class="col-md-12">
-				<label>Amount</label>
-				<input [(ngModel)]="amount" type="text" required="required" class="form-control" name="amount">
+				<label>Amount:</label>
+				<input type="text" [(ngModel)]="amount" required="required" class="form-control" name="amount">
 			</div>
+			
 			<div class="col-md-12">
 				<input type="submit" class="btn btn-primary" value="Calculate">
 			</div>
