--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,3 +1,43 @@
-<p>
-  home works!
-</p>
+<div class="appHome">
+	<hr/>
+	<div class="appHeader">
+		<div id="appHeader-heading">
+			Foreign Exchange <br>
+			Rate Calculator
+		</div>
+		<div id="appHeader-getStartedBtn">
+			<!-- Calculator Link -->
+			<div class="btn btn-primary">Get Started</div> 
+		</div>
+	</div>
+	<hr/>
+	<div class="appCalculator">
+		<div class="row">
+			<div class="col-md-6">
+				<div id="appCalculator-description">
+					With the Foreign Exchange Rate Currency Calculator, you can convert any amount from and to one of the 30 available currencies in our database. 
+				</div>
+			</div>
+			<div class="col-md-6">
+			<img id="appCalculator-image" src="" />
+			</div>
+		</div>
+	</div>
+	<hr/>
+	<div class="appForSupervisor">
+		<div id="appForSupervisor-description">
+			Exclusive content is available for Western Union Supervisors, such as a dashboard of the live exchange rates of the current plus 30 additional currencies. Signup and login using any of the navigable buttons below or to the side to do so.
+		</div>
+		<div id="appForSupervisor-signup-login">
+			<div class="btn btn-primary">Signup</div>
+			<div class="btn btn-primary">Login</div>
+		</div>
+	</div>
+	<hr/>
+	<div class="appFooter">
+		<div id="appFooter-ProjectTeam">
+			Ramanpreet C. Dhwanish P. Justin P. Baitao W. <br>
+			Professor Brown . CIS 5800
+		</div>
+	</div>
+</div>
