--- a/client/src/app/components/conversion/conversion.component.html
+++ b/client/src/app/components/conversion/conversion.component.html
@@ -1,13 +1,16 @@
-<p>Conversion works!</p>
-
 <div class="row">
-	<ul class="list-group col-md-8">
-		<li class="list-group-item">Base Currenct: {{fromCurrency}}</li>
-		<li class="list-group-item">Convert to Currency: {{toCurrency}}</li>
-		<li class="list-group-item">Amount: {{amount}}</li>
-		<li class="list-group-item">Converted Amount: {{convertToAmount}}</li>
-	</ul>
+	<h2 class="page-header">Calculator</h2>
 </div>
-<div class="row">
-<div class="btn btn-primary col-md-4" [routerLink]="['/calculator']">Back</div>
+<div class="conversionView">
+	<div class="row">
+		<ul class="list-group col-md-12">
+			<li class="list-group-item">Base Currency: {{fromCurrency}}</li>
+			<li class="list-group-item">Convert to Currency: {{toCurrency}}</li>
+			<li class="list-group-item">Amount: {{amount}}</li>
+			<li class="list-group-item">Converted Amount: {{convertToAmount}}</li>
+		</ul>
+	</div>
+	<div class="row">
+		<div class="btn btn-primary col-md-12" [routerLink]="['/calculator']">Back</div>
+	</div>
 </div>
