--- a/client/src/app/components/dashboard/dashboard.component.html
+++ b/client/src/app/components/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
-<h3>Latest Currency Rates:</h3>
-
+<div class="row">
+	<h2 class="page-header">Latest Currency Rates:</h2>
+</div>
 <div align="left">
 	<table style="width:50%">
 		<tr>
