--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,3 +1,10 @@
-/*.main {
-	padding-left: 20%;
-}*/
+.flashMessages {
+	margin-left: auto;
+	margin-right: auto;	
+	width: 40%;
+
+	text-align: center;
+	font-size: 14px;
+	font-weight: bold;
+}
+
