--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,19 +1,19 @@
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-lg-2">
+		<div class="col-md-2">
 			<navbar></navbar>
 		</div>
-		<div class="col-lg-10">
+		<div class="col-md-10">
 			<div class="row">
-				<div class="col-lg-6" align="left">Fantastic Four</div>
-				<div class="col-lg-6" align="right">Fxr Calculator</div>
+				<div class="col-md-6" align="left">Fantastic Four</div>
+				<div class="col-md-6" align="right">Fxr Calculator</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-12">
+				<div class="col-md-12">
 					<router-outlet></router-outlet>
-					<div class="col-lg-6">
-						<flash-messages></flash-messages>
-					</div>
+				</div>
+				<div class="flashMessages col-md-12">
+					<flash-messages></flash-messages>
 				</div>
 			</div>
 		</div>
