--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -15,11 +15,11 @@
 		<div class="row">
 			<div class="col-md-6">
 				<div id="appCalculator-description">
-					With the Foreign Exchange Rate Currency Calculator, you can convert any amount from and to one of the 30 available currencies in our database. 
+					With the Foreign Exchange Rate Currency Calculator, you can convert any amount from and to one of the 30 available currencies in our database. Just select two currencies from the dropdown menu and enter any numeric amount.
 				</div>
 			</div>
 			<div class="col-md-6">
-			<img id="appCalculator-image" src="" />
+				<img id="appCalculator-image" src="./img/pic.PNG" />
 			</div>
 		</div>
 	</div>
