--- a/client/src/app/components/navbar/navbar.component.css
+++ b/client/src/app/components/navbar/navbar.component.css
@@ -4,3 +4,34 @@ nav {
 	width: 15%;
 	float: left;
 }
+
+nav ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
+nav ul.general {
+	margin-top: 100%;
+}
+
+h3 {
+	margin-left: 20px;
+}
+
+nav ul li {
+	/*margin-bottom: -15px;*/
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+}
+
+.btn {
+	width: 100%;
+	margin-bottom: 0;
+}
+
+.btn:hover {
+	background-color: #eeeeee;
+	width: 100%;
+}
