--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+form {
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
+}
+
+form .col-md-12 {
+	margin-top: 30px;
+}
+
+label {
+	font-size: 16px;
+}
+
+.btn {
+	font-size: 14px;
+	width: 40%;
+	margin-bottom: 30px;
+}
