added 30 more currencies

--- a/client/src/app/components/dashboard/dashboard.component.html
+++ b/client/src/app/components/dashboard/dashboard.component.html
@@ -10,6 +10,18 @@
 			<th>Daily Rate</th>
 		</tr>
 		<tr>
+			<td>؋</td>
+			<td>AFN</td>
+			<td>Afghan Afghani</td>
+			<td>{{AFN}}</td>
+		</tr>
+		<tr>
+			<td>$</td>
+			<td>ARS</td>
+			<td>Argentine Peso</td>
+			<td>{{ARS}}</td>
+		</tr>
+		<tr>
 			<td>$</td> 
 			<td>AUD</td>
 			<td>Australian Dollar</td>
@@ -46,6 +58,12 @@
 			<td>{{CNY}}</td>	    
 		</tr>
 		<tr>
+			<td>₡</td>
+			<td>CRC</td>
+			<td>Costa Rican Colon</td>
+			<td>{{CRC}}</td>
+		</tr>
+		<tr>
 			<td>Kč</td> 
 			<td>CZK</td>
 			<td>Czech Republic Koruna</td>
@@ -58,16 +76,46 @@
 			<td>{{DKK}}</td>	    
 		</tr>
 		<tr>
+			<td>RD$</td>
+			<td>DOP</td>
+			<td>Dominican Peso</td>
+			<td>{{DOP}}</td>
+		</tr>
+		<tr>
+			<td>E£</td>
+			<td>EGP</td>
+			<td>Egyptian Pound</td>
+			<td>{{EGP}}</td>
+		</tr>
+		<tr>
 			<td>€</td> 
 			<td>EUR</td>
 			<td>Euro</td>
 			<td>{{EUR}}</td>	    
 		</tr>
 		<tr>
+			<td>$</td>
+			<td>FJD</td>
+			<td>Fijian Dollar</td>
+			<td>{{FJD}}</td>
+		</tr>
+		<tr>
 			<td>£</td>
 			<td>GBP</td>
 			<td>British Pound Sterling</td>
 			<td>{{GBP}}</td>
+		</tr>
+		<tr>
+			<td>Q</td>
+			<td>GTQ</td>
+			<td>Guatemalan Quetzal</td>
+			<td>{{GTQ}}</td>
+		</tr>
+		<tr>
+			<td>$</td>
+			<td>GYD</td>
+			<td>Guyanaese Dollar</td>
+			<td>{{GYD}}</td>
 		</tr>
 		<tr>
 			<td>$</td> 
@@ -82,10 +130,22 @@
 			<td>{{HRK}}</td>	    
 		</tr>
 		<tr>
+			<td>G</td>
+			<td>HTG</td>
+			<td>Haitian Gourde</td>
+			<td>{{HTG}}</td>
+		</tr>
+		<tr>
 			<td>Ft</td> 
 			<td>HUF</td>
 			<td>Hungarian Forint</td>
 			<td>{{HUF}}</td>	    
+		</tr>
+		<tr>
+			<td>Rp</td>
+			<td>IDR</td>
+			<td>Indonesian Rupiah</td>
+			<td>{{IDR}}</td>
 		</tr>
 		<tr>
 			<td>₪</td> 
@@ -100,16 +160,64 @@
 			<td>{{INR}}</td>
 		</tr>
 		<tr>
+			<td>﷼</td>
+			<td>IRR</td>
+			<td>Iranian Rial</td>
+			<td>{{IRR}}</td>
+		</tr>
+		<tr>
+			<td>kr</td>
+			<td>ISK</td>
+			<td>Icelandic Króna</td>
+			<td>{{ISK}}</td>
+		</tr>
+		<tr>
+			<td>J$</td>
+			<td>JMD</td>
+			<td>Jamaican Dollar</td>
+			<td>{{JMD}}</td>
+		</tr>
+		<tr>
 			<td>¥</td> 
 			<td>JPY</td>
 			<td>Japanese Yen</td>
 			<td>{{JPY}}</td>	    
 		</tr>
 		<tr>
+			<td>៛</td>
+			<td>KHR</td>
+			<td>Cambodian Riel</td>
+			<td>{{KHR}}</td>
+		</tr>
+		<tr>
+			<td>₩</td>
+			<td>KPW</td>
+			<td>North Korean Won</td>
+			<td>{{KPW}}</td>
+		</tr>
+		<tr>
 			<td>₩</td> 
 			<td>KRW</td>
-			<td>Korean Won</td>
+			<td>South Korean Won</td>
 			<td>{{KRW}}</td>	    
+		</tr>
+		<tr>
+			<td>$</td>
+			<td>LRD</td>
+			<td>Liberian Dollar</td>
+			<td>{{LRD}}</td>
+		</tr>
+		<tr>
+			<td>MOP$</td>
+			<td>MOP</td>
+			<td>Macanese Pataca</td>
+			<td>{{MOP}}</td>
+		</tr>
+		<tr>
+			<td>₮</td>
+			<td>MNT</td>
+			<td>Mongolian Tugrik</td>
+			<td>{{MNT}}</td>
 		</tr>
 		<tr>
 			<td>$</td> 
@@ -124,6 +232,12 @@
 			<td>{{MYR}}</td>	    
 		</tr>
 		<tr>
+			<td>$</td>
+			<td>NAD</td>
+			<td>Namibian Dollar</td>
+			<td>{{NAD}}</td>
+		</tr>
+		<tr>
 			<td>kr</td> 
 			<td>NOK</td>
 			<td>Norwegian Krone</td>
@@ -136,10 +250,34 @@
 			<td>{{NZD}}</td>	    
 		</tr>
 		<tr>
+			<td>﷼</td>
+			<td>OMR</td>
+			<td>Omani Rial</td>
+			<td>{{OMR}}</td>
+		</tr>
+		<tr>
+			<td>B/..</td>
+			<td>PAB</td>
+			<td>Panamanian Balboa</td>
+			<td>{{PAB}}</td>
+		</tr>
+		<tr>
+			<td>S/..</td>
+			<td>PEN</td>
+			<td>Peruvian Sol</td>
+			<td>{{PEN}}</td>
+		</tr>
+		<tr>
 			<td>₱</td> 
 			<td>PHP</td>
 			<td>Philippines Peso</td>
 			<td>{{PHP}}</td>	    
+		</tr>
+		<tr>
+			<td>₨</td>
+			<td>PKR</td>
+			<td>Pakistani Rupee</td>
+			<td>{{PKR}}</td>
 		</tr>
 		<tr>
 			<td>zł</td> 
@@ -148,16 +286,34 @@
 			<td>{{PLN}}</td>	    
 		</tr>
 		<tr>
+			<td>﷼</td>
+			<td>QAR</td>
+			<td>Qatari Rial</td>
+			<td>{{QAR}}</td>
+		</tr>
+		<tr>
 			<td>lei</td> 
 			<td>RON</td>
 			<td>Romania New Leu</td>
 			<td>{{RON}}</td>	    
 		</tr>
 		<tr>
+			<td>РСД</td>
+			<td>RSD</td>
+			<td>Serbian Dinar</td>
+			<td>{{RSD}}</td>
+		</tr>
+		<tr>
 			<td>₽</td> 
 			<td>RUB</td>
 			<td>Russian Ruble</td>
 			<td>{{RUB}}</td>	    
+		</tr>
+		<tr>
+			<td>SR</td>
+			<td>SAR</td>
+			<td>Saudi Riyal</td>
+			<td>{{SAR}}</td>
 		</tr>
 		<tr>
 			<td>kr</td> 
@@ -170,6 +326,12 @@
 			<td>SGD</td>
 			<td>Singapore Dollar</td>
 			<td>{{SGD}}</td>	    
+		</tr>
+		<tr>
+			<td>Le</td>
+			<td>SLL</td>
+			<td>Sierra Leonean Leone</td>
+			<td>{{SLL}}</td>
 		</tr>
 		<tr>
 			<td>฿</td> 
@@ -188,6 +350,18 @@
 			<td>USD</td>
 			<td>United States Dollar</td>
 			<td>{{USD}}</td>
+		</tr>
+		<tr>
+			<td>₫</td>
+			<td>VND</td>
+			<td>Vietnamese Dong</td>
+			<td>{{VND}}</td>
+		</tr>
+		<tr>
+			<td>$</td>
+			<td>XCD</td>
+			<td>East Caribbean Dollar</td>
+			<td>{{XCD}}</td>
 		</tr>
 		<tr>
 			<td>R</td> 
