--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -1,3 +1,5 @@
+<img src="./img/logo.png" />
+
 <nav class="navbar navbar-default navbar-fixed-top">
 	<ul class="general">
 		<li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact:true }"><a class="btn btn-navbar" [routerLink]="['/']">Home</a></li>
@@ -5,7 +7,7 @@
 		<hr/>
 	</ul>
 	<!-- Move admin closer to the bottom of the nav -->
-	<h3>Admin:</h3>
+	<h4>Admin:</h4>
 	<br/>
 	<ul class="admin">
 		<!-- If user is not logged in -->
