--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -4,7 +4,7 @@
 			<navbar></navbar>
 		</div>
 		<div class="col-md-10">
-			<div class="row">
+			<div class="row" id="appTitle">
 				<div class="col-md-6" align="left">Fantastic Four</div>
 				<div class="col-md-6" align="right">Fxr Calculator</div>
 			</div>
