--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -19,7 +19,7 @@
 				</div>
 			</div>
 			<div class="col-md-6">
-				<img id="appCalculator-image" src="./img/pic.PNG" />
+				<img id="appCalculator-image" src="img/pic.PNG" />
 			</div>
 		</div>
 	</div>
