--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+h2.page-header {
+	font-weight: bold;
+}
+
 form {
 	margin-left: auto;
 	margin-right: auto;
