--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,6 +1,8 @@
 #appTitle {
-	font-size: 20px;
 	margin-top: 20px;
+	font-size: 20px;
+	font-weight: bold;
+	text-transform: lowercase;
 }
 
 .flashMessages {
