--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<img src="./img/logo.png" />
+<img src="img/logo.png" alt="Fantastic_Four_Logo" />
 
 <nav class="navbar navbar-default navbar-fixed-top">
 	<ul class="general">
