--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-	<h2 class="page-header">Supervisor Register</h2>
+	<h2 class="page-header">Supervisor Registration</h2>
 </div>
 <div class="row">
 	<div class="col-md-12">
