--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -18,8 +18,8 @@
 					With the Foreign Exchange Rate Currency Calculator, you can convert a numeric amount from and to any of the 30 available currencies in our database. Just select two currencies from the dropdown menu and enter a numeric amount.
 				</div>
 			</div>
-			<div class="col-md-6">
-				<img id="appCalculator-image" src="img/pic.PNG" />
+			<div class="col-md-6" id="appCalculator-image">
+				<img src="assets/img/pic.PNG" alt="Fantastic_Four_FxrCalculator" class="img-thumbnail" />
 			</div>
 		</div>
 	</div>
