--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,5 @@
-<img src="img/logo.png" alt="Fantastic_Four_Logo" />
-
 <nav class="navbar navbar-default navbar-fixed-top">
+	<img src="assets/img/logo.png" alt="Fantastic_Four_Logo" />
 	<ul class="general">
 		<li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact:true }"><a class="btn btn-navbar" [routerLink]="['/']">Home</a></li>
 		<li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact:true }"><a class="btn btn-navbar" [routerLink]="['/calculator']">Calculator</a></li>
